@@ -1,5 +1,7 @@
 Date	Added
 
+2011/02/15
+	* Rev. 14707 Added map-server battle setting 'gm_check_minlevel'. [Ai4rei]
 2011/02/06
 	* Rev. 14700 Added char-server setting 'char_del_delay'. [Ai4rei]
 2011/01/13
